=== HEAD

* Use explicit columns when using automatically prepared SELECT statements in the prepared statement plugins (jeremyevans)

* Make Dataset#insert_select on PostgreSQL respect existing RETURNING clause (jeremyevans)

* Fix eager loading limited associations via a UNION when an association block is used (jeremyevans)

* Associate reciprocal object before saving associated object when creating new objects in nested_attributes (chanks, jeremyevans) (#831)

* Handle intervals containing more than 100 hours in the pg_interval extension's parser (will) (#827)

* Remove methods/class deprecated in 4.11.0 (jeremyevans)

* Allow Dataset#natural_join/cross_join and related methods to take a options hash passed to join_table (jeremyevans)

* Add :reset_implicit_qualifier option to Dataset#join_table, to set false to not reset the implicit qualifier (jeremyevans)

* Support :notice_receiver Database option when postgres adapter is used with pg driver (jeltz, jeremyevans) (#825)

=== 4.11.0 (2014-06-03)

* Add :model_map option to class_table_inheritance plugin so class names don't need to be stored in the database (jeremyevans)

* Set version when using for MySQL/SQLite emulation in the mock adapter (jeremyevans)

* Add support for CUBRID/SQLAnywhere emulation to the mock adapter (jeremyevans)

* Add support for the jsonb operators added in PostgreSQL 9.4 to the pg_json_ops extension (jeremyevans)

* Add support for new json/jsonb functions added in PostgreSQL 9.4 to the pg_json_ops extension (jeremyevans)

* Add support for the PostgreSQL 9.4+ jsonb type to the pg_json_ops extension (jeremyevans)

* Add support for derived column lists to Sequel.as and SQL::AliasMethods#as (jeremyevans)

* Support connecting to a DB2 catalog name in the ibmdb adapter (calh) (#821)

* Fix warnings in some cases in the ibmdb adapter (calh) (#820)

* Add SQL::Function#with_ordinality for creating set returning functions WITH ORDINALITY (jeremyevans)
